# stasis

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  build.bat  build.rs
assets/: config.html  index.html  init.js
frontend/: build.mjs  eslint.config.js  package-lock.json  package.json  vite.config.init.ts  vite.config.template.ts
frontend/src/: init.ts
frontend/src/config/: App.tsx  index.html  types.ts
frontend/src/config/locales/: en.ts  i18n.ts  zhCn.ts
frontend/src/screensavers/default/: index.html  main.ts  style.css
locales/: en.yml  web.en.yml  web.zh-CN.yml  zh-CN.yml
locales/web/: en.json  zh-CN.json
src/: assets.rs  config.rs  main.rs  screen_saver.rs  utils.rs  winapi_utils.rs
