[package]
name = "stasis"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
fltk = { version = "1", features = ["fltk-bundled"] }
fltk-theme = "0.7"
fltk-webview = "0.4"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = 'z'
lto = true
