[package]
name = "stasis"
version = "0.2.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
fltk = { version = "1.5.21", features = ["fltk-bundled"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"
wv = { git = "https://github.com/nini22P/wv" }
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
] }

[build-dependencies]
cc = "1.2.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 'z'
lto = true
